package com.example.esprit.model;

public enum AssignmentScope {
        PROJECT,    // All groups in all classes
        CLASS,      // All groups in one class
        GROUP,      // Specific group
        INDIVIDUAL  // Specific student
    }