package com.example.esprit.model;

public enum AssignmentStatus {
    ASSIGNED,
    IN_PROGRESS,
    COMPLETED
}