package com.example.esprit.model;

public enum EnrollmentStatus {
    ACTIVE,
    COMPLETED,
    WITHDRAWN
}