package com.example.esprit.model;

public enum ProjectStatus {
    ACTIVE,
    COMPLETED,
    ARCHIVED
}