package esprit.git.gestionsummary_backgit_me.Entities;

public enum TypeFormation {
    ALTERNANT,
    COURS_DU_JOUR,
    COURS_DU_SOIR,
}
